--- a/sass/error404.css
+++ b/sass/error404.css
@@ -2,6 +2,8 @@
   width: 100vw;
   min-height: 100vh;
   position: absolute;
+  top: 0;
+  left: 0;
   z-index: 50;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -19,11 +21,17 @@
   background-color: var(--main-color);
 }
 
-button {
+.error404 button {
   position: fixed;
   left: 2rem;
   top: 2rem;
-  padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.6rem;
   cursor: pointer;
   background-color: var(--main-color);
   border: none;
@@ -31,6 +39,8 @@ button {
           box-shadow: 0 0 5px var(--text-color);
   border-radius: 1rem;
   color: var(--text-color);
+  font-size: 1em;
+  text-align: center;
   -webkit-transition: background-color 200ms, -webkit-transform 500ms, -webkit-box-shadow 500ms;
   transition: background-color 200ms, -webkit-transform 500ms, -webkit-box-shadow 500ms;
   transition: background-color 200ms, transform 500ms, box-shadow 500ms;
@@ -38,14 +48,18 @@ button {
   -webkit-transition-timing-function: cubic-bezier(0.37, 1.8, 0.95, 0.66);
           transition-timing-function: cubic-bezier(0.37, 1.8, 0.95, 0.66);
 }
-button:hover {
+.error404 button:hover {
   background-color: var(--complementary-color);
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
-button:active {
+.error404 button:active {
   -webkit-box-shadow: 0 0 15px var(--text-color);
           box-shadow: 0 0 15px var(--text-color);
+}
+.error404 button img {
+  height: 1.5em;
+  margin-right: 0.5rem;
 }
 
 @-webkit-keyframes fall {
@@ -236,8 +250,8 @@ svg #cloud2 {
           animation: slide-from-right 1.8s;
 }
 svg #sun {
-  -webkit-animation: shine 2s infinite;
-          animation: shine 2s infinite;
+  -webkit-animation: shine 2s;
+          animation: shine 2s;
 }
 @media (min-width: 640px) and (max-width: 1500px) {
   svg {
