--- a/sass/index.css
+++ b/sass/index.css
@@ -1,14 +1,169 @@
 /* -------------------- RESET CSS */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
 * {
   padding: 0;
   margin: 0;
 }
 
+body {
+  background-color: var(--main-color);
+  overflow-x: hidden;
+  font-family: "Roboto Mono", monospace;
+  color: var(--text-color);
+}
+
 main {
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  background-color: var(--main-color);
+  grid-template-columns: 15vw 1fr;
+}
+
+nav.sub-left-menu {
+  min-height: 100vh;
+  background-color: var(--secondary-color);
+  position: relative;
+}
+nav.sub-left-menu::after {
+  content: "<< PLAN";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 111px;
+  padding: 0.5rem;
+  background-color: var(--secondary-color);
+  border-radius: 0 0 0.5rem 0;
+}
+
+nav.top-menu {
+  z-index: 30;
+}
+nav.top-menu #slide-menu {
+  position: absolute;
+  top: 75px;
+  right: 0;
+  width: 60vw;
+  height: 70px;
+  -webkit-transform: translateX(100%) translateY(-50%);
+          transform: translateX(100%) translateY(-50%);
+  background-color: var(--complementary-color);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+nav.top-menu #slide-menu ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+nav.top-menu #slide-menu ul li {
+  list-style-type: none;
+}
+nav.top-menu #slide-menu.slide-menu-on {
+  -webkit-transform: translateX(0) translateY(-50%);
+          transform: translateX(0) translateY(-50%);
+}
+
+@-webkit-keyframes hover-cube {}
+
+@keyframes hover-cube {}
+nav.top-menu div.button-menu {
+  position: fixed;
+  top: 75px;
+  right: 4rem;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  height: 50px;
+  border: none;
+  background-color: transparent;
+  -webkit-perspective: 800px;
+          perspective: 800px;
+  -webkit-perspective-origin: center;
+          perspective-origin: center;
+}
+nav.top-menu div.button-menu div.menu-cube {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transform-origin: center 25px;
+          transform-origin: center 25px;
+  -webkit-transform: rotateY(-15deg) rotateX(10deg);
+          transform: rotateY(-15deg) rotateX(10deg);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  cursor: pointer;
+}
+nav.top-menu div.button-menu div.menu-cube div {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  -webkit-box-shadow: 0 0 4px var(--text-color), inset 0 0 4px var(--text-color);
+          box-shadow: 0 0 4px var(--text-color), inset 0 0 4px var(--text-color);
+}
+nav.top-menu div.button-menu div.menu-cube div.front {
+  -webkit-transform: translateZ(25px);
+          transform: translateZ(25px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+nav.top-menu div.button-menu div.menu-cube div.back {
+  -webkit-transform: translateZ(-25px) rotateY(180deg);
+          transform: translateZ(-25px) rotateY(180deg);
+}
+nav.top-menu div.button-menu div.menu-cube div.left {
+  -webkit-transform: translateZ(-25px) rotateY(270deg);
+          transform: translateZ(-25px) rotateY(270deg);
+  -webkit-transform-origin: center left;
+          transform-origin: center left;
+}
+nav.top-menu div.button-menu div.menu-cube div.right {
+  -webkit-transform: translateZ(-25px) rotateY(90deg);
+          transform: translateZ(-25px) rotateY(90deg);
+  -webkit-transform-origin: center right;
+          transform-origin: center right;
+}
+nav.top-menu div.button-menu div.menu-cube div.top {
+  -webkit-transform: translateZ(-25px) rotateX(90deg);
+          transform: translateZ(-25px) rotateX(90deg);
+  -webkit-transform-origin: center top;
+          transform-origin: center top;
+}
+nav.top-menu div.button-menu div.menu-cube div.bottom {
+  -webkit-transform: translateZ(-25px) rotateX(270deg);
+          transform: translateZ(-25px) rotateX(270deg);
+  -webkit-transform-origin: center bottom;
+          transform-origin: center bottom;
+}
+nav.top-menu div.button-menu div.menu-cube:hover div {
+  background-color: var(--complementary-color);
+}
+nav.top-menu div.button-menu div.menu-on {
+  -webkit-transform: rotateX(0deg) rotateY(30deg) rotateZ(0deg);
+          transform: rotateX(0deg) rotateY(30deg) rotateZ(0deg);
+}
+nav.top-menu div.button-menu div.menu-on div {
+  background-color: var(--complementary-color);
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
 }
 /*# sourceMappingURL=index.css.map */
