--- a/sass/index.scss
+++ b/sass/index.scss
@@ -4,12 +4,203 @@
     margin: 0;
 }
 
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap');
+
+
+
+body {
+    background-color: var(--main-color);
+    overflow-x: hidden;
+
+    font-family: 'Roboto Mono', monospace;
+    color: var(--text-color);
+}
+
 main {
-    width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
 
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 15vw 1fr;
+}
 
-    background-color: var(--main-color);
+
+
+nav.sub-left-menu {
+    min-height: 100vh;
+
+    background-color: var(--secondary-color);
+
+    position: relative;
+
+    &::after {
+        content: "<< PLAN";
+        display: block;
+
+        position: absolute;
+        top: 0;
+        left: 100%;
+
+
+        width: 111px;
+
+        padding: 0.5rem;
+        background-color: var(--secondary-color);
+        border-radius: 0 0 0.5rem 0;
+    }
+}
+
+nav.top-menu {
+    z-index: 30;
+
+    & #slide-menu {
+        position: absolute;
+        top: 75px;
+        right: 0;
+
+        width: 60vw;
+        height: 70px;
+
+        transform: translateX(100%) translateY(-50%);
+        
+        background-color: var(--complementary-color);
+
+        transition: all 1s;
+
+        & ul {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+
+            height: 100%;
+
+            & li {
+                list-style-type: none;
+            }
+        }
+    }
+
+    & #slide-menu.slide-menu-on {
+        transform: translateX(0) translateY(-50%);
+    }
+}
+
+
+
+
+// Cube 3D
+@keyframes hover-cube {
+    
+}
+
+nav.top-menu div.button-menu {
+    position: fixed;
+    top: 75px;
+    right: 4rem;
+    transform: translateY(-50%);
+
+    height: 50px;
+
+    border: none;
+    background-color: transparent;
+
+    perspective: 800px;
+    perspective-origin: center;
+
+    // Le cube
+    & div.menu-cube {
+        position: relative;
+        width: 50px;
+        height: 50px;
+
+        transform-style: preserve-3d;
+        transform-origin: center 25px;
+        transform: rotateY(-15deg) rotateX(10deg);
+
+        transition: all 1s;
+
+        cursor: pointer;
+
+        // Les faces du cube
+        & div {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+
+            transition: all 1s;
+
+            box-shadow: 0 0 4px var(--text-color), inset 0 0 4px var(--text-color);
+
+            &.front {
+                transform: translateZ(25px);
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            &.back {
+                transform: translateZ(-25px) rotateY(180deg);
+            }
+            &.left {
+                transform: translateZ(-25px) rotateY(270deg);
+                transform-origin: center left;
+            }
+            &.right {
+                transform: translateZ(-25px) rotateY(90deg);
+                transform-origin: center right;
+            }
+            &.top {
+                transform: translateZ(-25px) rotateX(90deg);
+                transform-origin: center top;
+            }
+            &.bottom {
+                transform: translateZ(-25px) rotateX(270deg);
+                transform-origin: center bottom;
+            }
+        }
+    }
+
+    // Le cube quand hover
+    & div.menu-cube:hover {
+        & div {
+            background-color: var(--complementary-color);
+
+            &.front {
+
+            }
+            &.back {
+                
+            }
+            &.left {
+                
+            }
+            &.right {
+                
+            }
+            &.top {
+                
+            }
+            &.bottom {
+                
+            }
+
+        }
+        
+    }
+    & div.menu-on {
+        transform: rotateX(0deg) rotateY(30deg) rotateZ(0deg);
+
+        & div {
+            background-color: var(--complementary-color);
+
+            
+        }
+    }
+}
+
+a {
+    text-decoration: none;
+    color: var(--text-color);
 }
