--- a/sass/index.css
+++ b/sass/index.css
@@ -15,32 +15,50 @@ body {
 main {
   max-width: 100vw;
   min-height: 100vh;
-  display: grid;
-  grid-template-columns: 15vw 1fr;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-right: 15vw;
+  padding-left: 15vw;
 }
 
 nav.sub-left-menu {
-  min-height: 100vh;
+  height: 100vh;
+  width: 15vw;
+  position: fixed;
+  left: 0;
+  -webkit-transform: translateX(-80%);
+          transform: translateX(-80%);
   background-color: var(--secondary-color);
-  position: relative;
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
+  border-radius: 0 20% 20% 0;
 }
-nav.sub-left-menu::after {
-  content: "<< PLAN";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 100%;
-  width: 111px;
-  padding: 0.5rem;
-  background-color: var(--secondary-color);
-  border-radius: 0 0 0.5rem 0;
+nav.sub-left-menu:hover {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  border-radius: 0;
+}
+nav.sub-left-menu:hover + section.content {
+  -webkit-transform: translateX(10%);
+          transform: translateX(10%);
+}
+
+section.content {
+  -webkit-transition: -webkit-transform 0.8s;
+  transition: -webkit-transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
 }
 
 nav.top-menu {
   z-index: 30;
 }
 nav.top-menu #slide-menu {
-  position: absolute;
+  position: fixed;
   top: 75px;
   right: 0;
   width: 60vw;
@@ -151,8 +169,25 @@ nav.top-menu div.button-menu div.menu-cube div.bottom {
   -webkit-transform-origin: center bottom;
           transform-origin: center bottom;
 }
+nav.top-menu div.button-menu div.menu-cube div a {
+  opacity: 0;
+  visibility: hidden;
+}
+nav.top-menu div.button-menu div.menu-cube:hover {
+  -webkit-transform: rotateY(0deg) rotateX(0deg);
+          transform: rotateY(0deg) rotateX(0deg);
+}
 nav.top-menu div.button-menu div.menu-cube:hover div {
   background-color: var(--complementary-color);
+}
+nav.top-menu div.button-menu div.menu-cube:hover div.left {
+  -webkit-transform: translateZ(50px) rotateY(360deg) translateX(calc(-20vw + 4rem));
+          transform: translateZ(50px) rotateY(360deg) translateX(calc(-20vw + 4rem));
+  width: 5vw;
+}
+nav.top-menu div.button-menu div.menu-cube:hover a {
+  opacity: 1;
+  visibility: visible;
 }
 nav.top-menu div.button-menu div.menu-on {
   -webkit-transform: rotateX(0deg) rotateY(30deg) rotateZ(0deg);
