--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,11 @@ footer{
     justify-content: space-around;
     width: 100vw;
 }
-section{
+footer section{
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+footer h1{
+    margin-bottom: 10px;
 }
