--- a/css/contenu2.css
+++ b/css/contenu2.css
@@ -1,3 +1,17 @@
+.transport{
+    display: flex;
+    justify-content: space-around;
+}
 .transport img{
-    width: 50px;
+    width: 100px;
+    height: 100px;
+}
+.description{
+    width: 80vw;
+    height: 35%;
+    overflow: hidden;
+}
+.description > article{
+    width: 100%;
+    height: 100%;
 }
